Memperbarui konten index.html

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </a>
     </section>
     <section id="about" class="about container">
-        <p>I am a student at Politeknik Negeri Medan, currently studying in the Business Administration program. With a passion for technology and business, I am dedicated to developing my skills in both fields. I have a keen interest in [sebutkan minat khusus, misalnya web development, digital marketing, atau manajemen bisnis] and am always looking for opportunities to learn and grow. Through my academic journey and extracurricular involvement, I aim to contribute meaningfully to future projects and innovations.</p>
+        <p>"I am a student at Politeknik Negeri Medan, currently pursuing a degree in Business Administration. With a strong passion for technology and business, I am committed to honing my skills in both fields. My primary interest lies in digital marketing, where I explore strategies to enhance online visibility and drive engagement. Through my academic journey and active involvement in extracurricular activities, I strive to make meaningful contributions to future projects and innovations."</p>
         <div class="about-exp">
             <div class="about-exp-item">
                 <div class="about-exp-item-header">
